--- a/Project-2/style.css
+++ b/Project-2/style.css
@@ -37,7 +37,7 @@ form {
   margin: 5rem;
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
+  flex-wrap: wrap-reverse;
 }
 
 @media screen and (min-width: 768px) {
