--- a/Project-2/style.css
+++ b/Project-2/style.css
@@ -40,14 +40,14 @@ form {
   flex-wrap: wrap-reverse;
 }
 
-@media screen and (min-width: 768px) {
-  .animal-container {
+@media screen and (max-width: 777px) {
+  .fact-container {
     width: 400px;
   }
 }
 
-@media screen and (min-width: 1280px) {
-  .animal-container {
+@media screen and (min-width: 390px) {
+  .fact-container {
     width: 500px;
   }
 }
