--- a/Project-2/style.css
+++ b/Project-2/style.css
@@ -44,6 +44,10 @@ form {
   flex-wrap: wrap-reverse;
 }
 
+.fact-container {
+  margin: 2rem;
+}
+
 @media screen and (max-width: 777px) {
   .fact-container {
     width: 400px;
